--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.15",
+    "animate.css": "^4.1.1",
     "firebase": "^12.4.0",
     "lottie-react": "^2.4.1",
     "react": "^19.1.1",
