--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.15",
     "animate.css": "^4.1.1",
+    "axios": "^1.13.2",
     "firebase": "^12.4.0",
     "lottie-react": "^2.4.1",
     "react": "^19.1.1",
