--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.15",
     "animate.css": "^4.1.1",
+    "aos": "^2.3.4",
     "axios": "^1.13.2",
     "date-fns": "^4.1.0",
     "firebase": "^12.4.0",
+    "framer-motion": "^12.23.24",
     "lottie-react": "^2.4.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
